# curator

./: Dockerfile  pyproject.toml
src/curator/: __init__.py  models.py  sources.py
